<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pesquisaText"
        android:layout_margin="20dp"
        android:layout_above="@+id/origin"
        android:textSize="24sp"
        />

    <EditText
        android:id="@+id/origin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:hint="@string/originText"
        />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/destination"
        android:layout_below="@+id/origin"
        android:layout_margin="20dp"
        android:hint="@string/destinationText"

        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/fuelPrice"
        android:layout_below="@+id/destination"
        android:inputType="numberDecimal"
        android:layout_margin="20dp"
        android:hint="@string/fuelPriceText"

        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/avgFuelConsumption"
        android:layout_below="@+id/fuelPrice"
        android:inputType="numberDecimal"
        android:layout_margin="20dp"
        android:hint="@string/avgFuelConsumptionText"

        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/calculate"
        android:layout_below="@+id/avgFuelConsumption"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="20dp"
        android:text="@string/calculateText"
        />




</RelativeLayout>